# turboworkflows

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: autodoc_command.txt  conf.py  index.rst  modules.rst  turboworkflows.pyscf_tools.rst  turboworkflows.rst  turboworkflows.utils_turboworkflows.rst
examples/: all_examples_clean.sh
examples/workflows_examples/: all_examples_clean.sh  all_examples_test.py  collections_workflows_examples.py  convertfort10mol_workflows_examples.py  lrdmc_ext_workflows_examples.py  lrdmc_opt_workflows_examples.py  lrdmc_workflows_examples.py  prep_workflows_examples.py  pyscf_workflows_examples.py  trexio_workflows_examples.py  vmc_workflows_examples.py  vmcopt_workflows_examples.py
examples/workflows_examples/all_input_files/init_occ_workflow/: fort.10
examples/workflows_examples/all_input_files/jascopy_twist_workflow/: parminimized.d
examples/workflows_examples/all_input_files/jascopy_workflow/: fort.10  fort.10_new
examples/workflows_examples/convertfort10mol-workflows/: job_manager.pkl  out_mol  submit.sh
turboworkflows/: workflow_collections.py  workflow_convertfort10.py  workflow_convertfort10mol.py  workflow_encapsulated.py  workflow_lanchers.py  workflow_lrdmc.py  workflow_lrdmc_ext.py  workflow_lrdmcopt.py  workflow_prep.py  workflow_pyscf.py  workflow_trexio.py  workflow_vmc.py  workflow_vmcopt.py
turboworkflows/pyscf_tools/: pyscf_to_trexio.py  pyscf_wrapper.py
turboworkflows/utils_turboworkflows/: turboworkflows_env.py
(+6 files in other folders)
