[metadata]
name = turboworkflows
author = Kosuke Nakano
author_email = kousuke_1123@icloud.com
long_description = file: README.md
long_description_content_type = README.md
url = https://github.com/kousuke-nakano/turboworkflows
project_urls =
    Bug tracker = https://github.com/kousuke-nakano/turboworkflows/issues
    Documentations = https://github.com/kousuke-nakano/turbotutorials
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7.2
install_requires =
    turbogenius    >= 0.1
    turbofilemanager  >= 0.1
    paradag        >= 1.2.0
    graphviz       >= 0.20.1
    setuptools_scm >= 7.0.5

[options.package_data]
* = *.txt, *.rst

[options.entry_points]
console_scripts =
    pyscf-run = turboworkflows.pyscf_tools.pyscf_wrapper.pyscf_wrapper:cli
    pyscf-to-trexio = turboworkflows.pyscf_tools.pyscf_to_trexio:cli

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
